ch06_데이터베이스(2)

--- a/이것이 취업을 위한 컴퓨터 과학이다/6. Database/jg/CH06_데이터베이스.md
+++ b/이것이 취업을 위한 컴퓨터 과학이다/6. Database/jg/CH06_데이터베이스.md
@@ -219,7 +219,7 @@ NoSQL에서는 명확한 스키마가 정의되지 않기 때문에 NoSQL 데이
 
 ---
 
-## 🔹 실행 순서
+## 🔹 실행 순서 .
 
 SQL의 논리적 실행 순서에서 중요한 부분만 뽑으면:
 
@@ -292,3 +292,191 @@ LIMIT 3;
 - `LIMIT` → 최종 결과에서 개수를 제한한다
 
 ---
+
+# 효율적 쿼리
+
+- 서브 쿼리, 조인, 뷰, 인덱스
+
+## 서브 쿼리와 조인
+
+- 서브 쿼리는 다른 SQL문이 포한된 SQL문을 의미
+- 조인은 2개의 테이블을 하나로 합치는 것을 의미
+
+### 여러 테이블의 질의하기
+
+- 하나의 select 문으로 여러 테이블의 레코드를 조회
+
+```sql
+select 테이블1.필드1, 테이블2.필드3
+from 테이블1, 테이블2
+where 테이블1.필드1 = 테이블2.필드2;
+```
+
+### 서브 쿼리
+
+`내부에 다른 SQL문이 포함되어 있는 SQL문`
+
+대표적인 2가지 유형
+
+- select 문 안에 select 문이 포함된 서브 쿼리
+- delete 문 안에 select 문이 포함된 서브 쿼리
+
+### 조인
+
+- 여러 테이블을 하나로 합치는 것을 의미
+
+![[Pasted image 20250916152353.png]]
+
+## 뷰
+
+- select 문의 결과로 만들어진 가상의 테이블
+- select 문의 결과를 뷰로 생성한 뒤, 해당 뷰에 다양한 SQL문을 실행해 볼 수 있음.
+- 특정 사용자에게만 해당 뷰에 대한 접근 권한을 부여
+- insert, updae, delete 불가
+
+## 인덱스
+
+- RDBMS의 성능을 향상시키는 가장 대중적인 방법
+- 검색 속도 향상을 목적으로 만드는 하나 이상의 테이블 필드에 대한 자료구조
+
+인덱스는 B트리 형태를 띔.
+
+MySQL에서는 크게 클러스터형 인덱스와 세컨더리 인덱스로 구분함.
+클러스터 인덱스: 테이블당 하나씩 만들 수 있는 인덱
+PK == 클러스터 인덱스
+
+```
+if(PK is null) => cluster index = field(NotNUll, Unique)
+```
+
+클러스터가 아닌 인덱스를 세컨더리 인덱스 라고 함.
+세컨더리 인덱스 == 논클러스터형 인덱스
+
+테이블에 여러개 존재 가능. but 클러스터형 인덱스 보다 느림.
+
+테이블당 3개이하 인덱스를 권고함.
+인덱스가 많아질수록 삽입 수정 삭제가 많아지면 비용이 커짐.
+
+# 데이터베이스 설계
+
+## ER다이어그램
+
+데이터베이스를 구성하는 요소들의 관계를 나타내는 그림이
+엔티티 관계를 표한하는 ER다이어그램.
+
+식별 비식별?
+
+```mermaid
+erDiagram
+    ORDER {
+        int order_id PK
+        int user_id
+    }
+    ORDER_ITEM {
+        int order_id PK, FK
+        int product_id PK
+        int quantity
+    }
+    USER {
+        int user_id PK
+        string name
+    }
+    POST {
+        int post_id PK
+        int user_id FK
+        string title
+    }
+
+    ORDER ||--o{ ORDER_ITEM : "식별 관계 (Identifying)"
+    USER  ||--o{ POST       : "비식별 관계 (Non-identifying)"
+
+```
+
+# 정규화
+
+제1~5정규화
+
+## 제1 정규형
+
+- 모든 속성이 원자 값을 가진다는 것.
+
+> 중복된 데이터가 없어야함.
+
+![[Pasted image 20250916161358.png]]
+![[Pasted image 20250916161403.png]]
+
+## 제2 정규형
+
+- 1정규형을 만족, 기본 키가 아닌 모든 필드들이 모든 기본 키에 완전히 종속되어야함.
+- 보통 기본 키가 2개 이상의 필드로 구성될 때 고려됨.
+
+기본 키가 아닌 필드가 기본 키의 일부에 종속되어 있는 경우 **부분 함수 종속성**이 있다고 표현함
+기본 키 전체에 완전하게 종속되어 있는 경우 **완전 함수 종속성**이라고 함.
+
+제2 정규형은 **부분 함수 종속성이 없는 상태** 임.
+
+> **기본키 일부에만 종속되는 컬럼(부분 함수 종속)이 없어야 한다.**  
+>  만약 있으면, 그 컬럼은 독립된 테이블로 분리해야 한다.
+
+![[Pasted image 20250916161706.png]]
+![[Pasted image 20250916161710.png]]
+
+## 제3 정규형
+
+- 제2 정규형을 만족하면서, 기본 키가 아닌 모든 필드가 기본 키에 이행적 종속성이 없는 상태
+- 어떤 컬림이 기본키 -> 다른 컬럼 -> 또 다른 컬럼으로 간접적으로 종속되는 관계를 말함.
+- 즉, A가 B를 결정하고, B가 C를 결정한다면, A -> C는 이행적 종속이라고 부름.
+  ![[Pasted image 20250916165012.png]]
+
+![[Pasted image 20250916165019.png]]
+
+## 보이스/코드 정규형
+
+- 제3 정규형을 만족하는 동시에 모든 결정자가 후보 키여야한다는 조건
+- 결정자란 특정 필드를 식별할 수 있는 필드를 의미함.
+- 어떤 컬럼이 다른 컬럼을 결정한다면, 그 컬럼은 반드시 후보키여야 한다
+
+과목 코드랑 담당 교수랑 항상 같앙서? 담당교수의 결정자가 과목코드
+
+![[Pasted image 20250916170243.png]]
+
+# NoSQL
+
+## 키-값 데이터베이스
+
+Redis or Memcached
+인메모리 데이터베이스
+
+## 도큐먼트 데이터베이스
+
+정형화되어 있지 않은 NoSQL
+유연한 스키마를 가질 수있음.
+
+## 그래프 데이터페이스
+
+neo4j
+데이터를 그래프의 노드 형태로 저장하는 데이터베이스
+노드 간의 연결 관계와 방향을 표현할 수 있기 때문에 SNS의 친구 관계나 교통망과 같이 데이터 간의 관계성이 중요한 레코드를 저장
+
+## 칼럼 패밀리 데이터베이스
+
+Cassandra, HBase
+행과 열이 있고, 로우 키를 통해 특정 행을 식별함.
+
+관련있는 열들이 모여 칼럼 패밀리라는 단위를 형성
+칼럼패밀리는 키스페이스라는 단위를 형성
+
+정리: NoSQL은 높은 부하를 감당하거나, 대용량 데이터를 다루는 분산 환경에서 좋음.
+스케일 아웃을 하기 편함.
+
+---
+
+Q. view를 쓰면 성능 최적화가 일어나는가요?
+A. 일반 **VIEW**는 단순히 SQL 쿼리 정의를 저장한 **가상 테이블**일 뿐이므로, 성능 최적화 효과는 없습니다. VIEW를 조회할 때마다 원본 테이블에 대해 동일한 JOIN/집계 쿼리가 실행되기 때문에, 직접 쿼리를 작성하는 것과 성능상 차이가 없습니다.
+
+Q. 식별과 비식별 관계가 무엇인가?
+A. **식별 관계는 부모 키가 자식의 PK에 포함되는 강한 종속 관계이고, 비식별 관계는 자식이 독립적인 PK를 가지며 부모 키를 단순 FK로만 두는 느슨한 관계입니다.** 식별 관계는 보통 상세 테이블이나 조인 테이블에 쓰이고, 비식별 관계는 일반적인 엔티티 간 참조에서 주로 사용됩니다.
+
+Q. 언제 역정규화를 해야할까요?
+A. **역정규화는 성능 최적화를 위해, 정규화된 구조로 인한 조회 성능 저하가 발생할 때 적용합니다.**  
+JOIN이 과도하거나, 집계 연산이 빈번하거나, 특정 조회 패턴이 반복되는 경우, 중복 컬럼·요약 테이블·데이터 마트 등을 추가하여 조회 속도를 개선할 수 있습니다.
